--- a/SupportApp/appsettings.json
+++ b/SupportApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SupportAppContext": "Server=(localdb)\\mssqllocaldb;Database=SupportAppContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SupportAppContext": "Server=localhost\\SQLEXPRESS;Database=SupportAppContext-1;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=SSPI;"
   }
 }
