Removed TicketsRepository, Added TicketsFinder/Modifier

--- a/SupportApp/appsettings.json
+++ b/SupportApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SupportAppContext": "Server=localhost\\SQLEXPRESS;Database=SupportAppContext-1;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=SSPI;"
+    "SupportAppContext": "Server=localhost,1433;Database=SupportAppContext-1;User=SA;Password=Password123!"
   }
 }
