--- a/XunitTests/XunitTests.csproj
+++ b/XunitTests/XunitTests.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoFixture.NUnit3" Version="4.14.0" />
     <PackageReference Include="FluentAssertions" Version="6.0.0-alpha0001" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.15.1" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
@@ -18,6 +19,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SupportApp\SupportApp.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Area" />
   </ItemGroup>
 
 </Project>
