--- a/SupportApp/appsettings.json
+++ b/SupportApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SupportAppContext": "Server=localhost,1433;Database=SupportAppContext-1;User=SA;Password=Password123!"
+    "SupportAppContext": "Server=localhost,1433;Database=SupportAppContext-1;User=SA;Password=Password123!",
   }
 }
