--- a/SupportApp/SupportApp.csproj
+++ b/SupportApp/SupportApp.csproj
@@ -33,6 +33,7 @@
     <_ContentIncludedByDefault Remove="Areas\Identity\Pages\_ValidationScriptsPartial.cshtml" />
     <_ContentIncludedByDefault Remove="Areas\Identity\Pages\_ViewImports.cshtml" />
     <_ContentIncludedByDefault Remove="Areas\Identity\Pages\_ViewStart.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\TicketImages\Create.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
